--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+version: '3.9'
 services:
   auth:
     image: node:18
@@ -10,7 +10,7 @@ services:
     working_dir: /usr/app
     command: sh -c "npm install && npm run dev"
     ports:
-      - "3000:3000"
+      - '3000:3000'
   users:
     image: postgres
     restart: always
@@ -19,13 +19,13 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
-      - "./src/queries/initialise.sql:/docker-entrypoint-initdb.d/initialise.sql"
+      - './src/queries/initialise.sql:/docker-entrypoint-initdb.d/initialise.sql'
   swagger:
     image: swaggerapi/swagger-editor
     ports:
-      - "8080:8080"
+      - '8080:8080'
     volumes:
       - ./swagger:/tmp
     environment:
