--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "cross-env NODE_ENV=dev nodemon ./src/server.ts",
     "serve": "docker compose up",
     "start": "node ./src/server.ts",
+    "lint": "npx prettier -c . && npx eslint",
+    "lint:fix": "npx prettier --write . && npx eslint --fix",
     "test": "jest"
   },
   "keywords": [],
@@ -21,6 +23,8 @@
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -29,6 +33,9 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/pg": "^8.10.9",
     "cross-env": "^7.0.3",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
